// 版本号
syntax = "proto3";

// 包名
package interactive.v1;

// 路径
option go_package = "interactive/v1";

// interactiveService 互动服务
service interactiveService {
  rpc Like(LikeRequest) returns(LikeResponse);
  rpc UnLike(UnLikeRequest) returns(UnLikeResponse);
  rpc Collect(CollectRequest) returns(CollectResponse);
  rpc UnCollect(UnCollectRequest) returns(UnCollectResponse);
  rpc InteractiveInfo(InteractiveInfoRequest) returns(InteractiveInfoResponse);
  rpc IncreaseRead(IncreaseReadRequest) returns(IncreaseReadResponse);
  rpc InsertFollow(InsertFollowRequest) returns(InsertFollowResponse);
  rpc CancelFollow(CancelFollowRequest) returns(CancelFollowResponse);
  rpc FollowList(FollowListRequest) returns(FollowListResponse);
  rpc FanList(FanListRequest) returns(FanListResponse);
  rpc BothFollowList(BothFollowListRequest) returns(BothFollowListResponse);
}

message FollowListRequest {
  int64 id = 1;
}
message FollowListResponse {
  repeated int64 ids = 1;
}

message FanListRequest {
  int64 id = 1;
}
message FanListResponse {
  repeated int64 ids = 1;
}

message BothFollowListRequest {
  int64 id = 1;
}
message BothFollowListResponse {
  repeated int64 ids = 1;
}

message InsertFollowRequest {
  Follow follow = 1;
}
message InsertFollowResponse {
}

message CancelFollowRequest {
  Follow follow = 1;
}
message CancelFollowResponse {
}

// 阅读，增加阅读数（根据lifelog的id）
// 请求
message IncreaseReadRequest {
  InteractiveDomain interactiveDomain = 1;
}
// 响应
message IncreaseReadResponse {
}


// 获取互动信息（阅读数，点赞数，收藏数）（根据lifelog的id）
// 请求
message InteractiveInfoRequest {
  InteractiveDomain interactiveDomain = 1;
}
// 响应
message InteractiveInfoResponse {
  InteractiveDomain interactiveDomain = 1;
}

message Follow  {
  int64 Id = 1;         // 主键
  int64 FollowerId = 2;  // 关注着
  int64 followeeId = 3; // 被关注着
  int64 CreateTime = 4; // 创建时间
}

message InteractiveDomain {
  string biz = 1;
  int64 biz_id = 2;
  int64 user_id = 3;
  int64 id = 4;
  int64 read_count = 5;
  int64 collect_count = 6;
  int64 like_count = 7;
  int64 create_time = 8;
  int64 update_time = 9;
}

// 点赞（根据lifelog的id）
// 请求
message LikeRequest {
  InteractiveDomain interactiveDomain = 1;
}
// 响应
message LikeResponse {
}

// 取消点赞（根据lifelog的id）
// 请求
message UnLikeRequest {
  InteractiveDomain interactiveDomain = 1;
}
// 响应
message UnLikeResponse {
}

// 收藏（根据lifelog的id）
// 请求
message CollectRequest {
  InteractiveDomain interactiveDomain = 1;
  int64 collectId = 2;
}
// 响应
message CollectResponse {
}

// 取消收藏（根据lifelog的id）
// 请求
message UnCollectRequest {
  InteractiveDomain interactiveDomain = 1;
  int64 collectId = 2;
}
// 响应
message UnCollectResponse {
}